[package]
name = "runroutines"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "rrmacro",
]

[build-dependencies]
rustc_version = "0.4"
cc = "*"

[dependencies]
rrmacro = { path = "rrmacro" }

log = "0.4"
rustc_version = "0.4"
crossbeam-deque = "*"
crossbeam-queue = "*"
libc = "*"
once_cell = "*"
